--- a/style.css
+++ b/style.css
@@ -23,8 +23,33 @@ body {
 
 header {
     display: grid;
-    grid-template-columns: 1fr 50px;
+    padding: 8px 15px;
+    grid-template-columns: 1fr 250px 50px;
     margin-top: 50px;
+    background-color: #E3E7E8;
+    position:  sticky;
+    top: 0;
+}
+
+header .user {
+    width: fit-content;
+
+}
+
+header .user button, .btn-primary {
+    background-color: #fff;
+    color:   #1C1F25;
+    border: 2px solid #1C1F25;
+    outline: none;
+    /* padding: 8px 15px; */
+    margin: 0px 10px;
+    transition: 0.5s;
+    border-radius: 4px;
+}
+
+header .user button:hover, .btn-primary:hover {
+    color: #fff;
+    background-color:  #1C1F25;
 }
 
 header .cart {
@@ -50,9 +75,13 @@ header .cart span {
 }
 
 
+header .cart:hover span {
+    background-color: #1C1F25;
+}
+
 .productList {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-top: 20px;
 }
@@ -70,7 +99,7 @@ header .cart span {
 }
 
 .cartDiv h1 {
-    color: #E8BC0E;
+    color: #fff;
     font-weight: 100;
     padding: 0  20px;
     height: 80px;
@@ -90,7 +119,7 @@ header .cart span {
 }
 
 .cartDiv .checkOut div {
-    background-color: #E8BC0E;
+    background-color: #fff;
     width: 100%;
     height: 70px;
     display: flex;
@@ -108,6 +137,7 @@ header .cart span {
 }
 
 .active .cartDiv {
+    /* 1366px - 400px = 966px */
     left: calc(100% - 400px);
 }
 
@@ -138,6 +168,7 @@ header .cart span {
 
 .productList .item button {
     background-color: #1C1F25;
+    margin-bottom: 4px;
     color: #fff;
     padding: 10px;
     width: 100%;
@@ -170,4 +201,18 @@ header .cart span {
 
 .cartList .count {
     margin: 0 10px;
+}
+
+
+/* Modal */
+
+form {
+    color: #000;
+}
+.form-control {
+    border: .5px solid #1C1F25;
+}
+
+input[type=checkbox] {
+    border: .5px solid #1C1F25;
 }
