--- a/style.css
+++ b/style.css
@@ -21,9 +21,12 @@ body {
     transition: 0.5s;
 }
 
+
+
+/* Header */
 header {
     display: grid;
-    padding: 8px 15px;
+    padding: 8px 25px;
     grid-template-columns: 1fr 250px 50px;
     margin-top: 50px;
     background-color: #E3E7E8;
@@ -36,7 +39,7 @@ header .user {
 
 }
 
-header .user button, .btn-primary {
+header .user button, .btn-main {
     background-color: #fff;
     color:   #1C1F25;
     border: 2px solid #1C1F25;
@@ -47,7 +50,7 @@ header .user button, .btn-primary {
     border-radius: 4px;
 }
 
-header .user button:hover, .btn-primary:hover {
+header .user button:hover, .btn-main:hover {
     color: #fff;
     background-color:  #1C1F25;
 }
@@ -81,10 +84,21 @@ header .cart:hover span {
 
 .productList {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat( auto-fit, minmax(30%, 1fr) );
     gap: 20px;
     margin-top: 20px;
 }
+
+
+.productDesc {
+    display: flex;
+    flex-direction: column;
+    height: 50vh;
+    outline: 2px solid red;
+}
+
+
+/* Cart */
 
 .cartDiv {
     position: fixed;
@@ -93,7 +107,7 @@ header .cart:hover span {
     left: 100%;
     width: 400px;
     height: 100vh;
-    overflow-y: auto;
+    overflow: auto;
     transition: 0.5s;
 
 }
@@ -145,6 +159,7 @@ header .cart:hover span {
     transform: translateX(-100px);
 }
 
+/* Products */
 
 .productList .item {
     text-align: center;
@@ -174,12 +189,17 @@ header .cart:hover span {
     width: 100%;
 }
 
+
+/* Cart List */
+
 .cartList li {
     display: grid;
     grid-template-columns: 100px repeat(3, 1fr);
     color: #fff;
     row-gap: 10px;
     margin-bottom: 20px;
+    outline: 2px solid red;
+    width: 95%;
 }
 
 .cartList li div {
@@ -204,7 +224,7 @@ header .cart:hover span {
 }
 
 
-/* Modal */
+/* Form Modal */
 
 form {
     color: #000;
@@ -215,4 +235,25 @@ form {
 
 input[type=checkbox] {
     border: .5px solid #1C1F25;
+}
+
+.social-icons i {
+    margin: 0 10px;
+}
+
+.btn-fb {
+    background-color: #4f70b5;
+    color: #fff;
+    opacity: .9;
+}
+
+.btn-fb:hover {
+    background-color: #4f70b5;
+    color: #fff;
+    opacity: 1;
+}
+
+.btn-secondary {
+    color: white;
+    background-color: #1C1F25;;
 }
